--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.23/dist/sweetalert2.all.min.js"></script>
     
     <!-- SCRIPTS -->
-
-    <script src="scripts/FetchPokemons.js"></script>
+    <script src="scripts/Pokemon-class.js"></script>
+    <script src="scripts/Fetch-pokemons.js"></script>
     <script src="scripts/Carrito.js"></script>
     <script src="scripts/script.js"></script>
 </body>
