Hice la funcionalidad del carrito

--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
                 
             </div>
         </main>
+        <section class="btns">
+            <button class="btnPag" id="prev">Anterior</button>
+            <button class="btnPag" id="next">Siguiente</button>
+        </section>
     <footer>
 
     </footer>
