correccion de errores

--- a/index.html
+++ b/index.html
@@ -54,7 +54,6 @@
     <!-- SCRIPTS -->
     <script src="scripts/Pokemon-class.js"></script>
     <script src="scripts/Fetch-pokemons.js"></script>
-    <script src="scripts/Carrito.js"></script>
-    <script src="scripts/script.js"></script>
+    <script src="scripts/Cart.js"></script>
 </body>
 </html>
